--- a/SolrExpress.Core/SolrExpress.Core.csproj
+++ b/SolrExpress.Core/SolrExpress.Core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CustomContractResolver.cs" />
     <Compile Include="Extension\Internal\ExpressionIDocumentExtension.cs" />
     <Compile Include="Extension\Internal\SolrSpatialFunctionTypeExtension.cs" />
+    <Compile Include="Extension\SolrQueryableExtension.cs" />
     <Compile Include="GeoCoordinate.cs" />
     <Compile Include="GeoCoordinateConverter.cs" />
     <Compile Include="IDocument.cs" />
@@ -110,13 +111,13 @@
     <Compile Include="Result\FacetRange.cs" />
     <Compile Include="Result\IConvertJsonObject.cs" />
     <Compile Include="Result\IConvertJsonPlainText.cs" />
-    <Compile Include="Result\IDocumentBuilder.cs" />
-    <Compile Include="Result\IFacetFieldResultBuilder.cs" />
-    <Compile Include="Result\IFacetQueryResultBuilder.cs" />
-    <Compile Include="Result\IFacetRangeResultBuilder.cs" />
+    <Compile Include="Result\IDocumentResult.cs" />
+    <Compile Include="Result\IFacetFieldResult.cs" />
+    <Compile Include="Result\IFacetQueryResult.cs" />
+    <Compile Include="Result\IFacetRangeResult.cs" />
     <Compile Include="Query\InvalidParameterTypeException.cs" />
-    <Compile Include="Result\IResultBuilder.cs" />
-    <Compile Include="Result\IStatisticResultBuilder.cs" />
+    <Compile Include="Result\IResult.cs" />
+    <Compile Include="Result\IStatisticResult.cs" />
     <Compile Include="Result\Statistic.cs" />
     <Compile Include="SolrFieldAttribute.cs" />
     <Compile Include="Checker.cs" />
