--- a/SolrExpress.Solr4/SolrExpress.Solr4.csproj
+++ b/SolrExpress.Solr4/SolrExpress.Solr4.csproj
@@ -62,6 +62,8 @@
     </Compile>
     <Compile Include="Parameter\FacetLimitParameter.cs" />
     <Compile Include="Parameter\FacetQueryParameter.cs" />
+    <Compile Include="Parameter\FacetRangeParameter.cs" />
+    <Compile Include="Parameter\FacetSpatialParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result\DocumentResult.cs" />
     <Compile Include="Resolver.cs" />
