--- a/SolrExpress.Solr4/SolrExpress.Solr4.csproj
+++ b/SolrExpress.Solr4/SolrExpress.Solr4.csproj
@@ -64,6 +64,9 @@
     <Compile Include="Parameter\FacetQueryParameter.cs" />
     <Compile Include="Parameter\FacetRangeParameter.cs" />
     <Compile Include="Parameter\FacetSpatialParameter.cs" />
+    <Compile Include="Parameter\FilterQueryParameter.cs" />
+    <Compile Include="Parameter\RowsParameter.cs" />
+    <Compile Include="Parameter\StartParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result\DocumentResult.cs" />
     <Compile Include="Resolver.cs" />
