--- a/SolrExpress.Core/SolrExpress.Core.csproj
+++ b/SolrExpress.Core/SolrExpress.Core.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Parameter\IFieldsParameter.cs" />
     <Compile Include="Parameter\IFilterParameter.cs" />
     <Compile Include="Parameter\ILimitParameter.cs" />
+    <Compile Include="Parameter\IMinimumShouldMatchParameter.cs" />
     <Compile Include="Parameter\IOffsetParameter.cs" />
     <Compile Include="Parameter\IParameter.cs" />
     <Compile Include="Parameter\IQueryParameter.cs" />
