--- a/SolrExpress.Solr4/SolrExpress.Solr4.csproj
+++ b/SolrExpress.Solr4/SolrExpress.Solr4.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Parameter\FieldListParameter.cs" />
     <Compile Include="Parameter\FilterQueryParameter.cs" />
     <Compile Include="Parameter\MinimumShouldMatchParameter.cs" />
+    <Compile Include="Parameter\QueryFieldParameter.cs" />
+    <Compile Include="Parameter\QueryParameter.cs" />
     <Compile Include="Parameter\RowsParameter.cs" />
     <Compile Include="Parameter\StartParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
