--- a/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
+++ b/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
@@ -62,12 +62,21 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Parameter\AnyParameterTests.cs" />
+    <Compile Include="Parameter\FacetFieldParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDocument.cs" />
+    <Compile Include="TestDocumentWithAnyPropertyTypes.cs" />
+    <Compile Include="TestDocumentWithAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SolrExpress.Core\SolrExpress.Core.csproj">
       <Project>{5be2cf22-c52a-4518-b3c6-c7c6a25e63a5}</Project>
       <Name>SolrExpress.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SolrExpress.Solr4\SolrExpress.Solr4.csproj">
+      <Project>{1e999f4c-b17c-4106-9ba4-c7ac0e00c0cd}</Project>
+      <Name>SolrExpress.Solr4</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
