--- a/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
+++ b/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Parameter\FacetLimitParameterTests.cs" />
     <Compile Include="Parameter\FacetQueryParameterTests.cs" />
     <Compile Include="Parameter\FacetRangeParameterTests.cs" />
+    <Compile Include="Parameter\FieldListParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDocument.cs" />
     <Compile Include="TestDocumentWithAnyPropertyTypes.cs" />
