--- a/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
+++ b/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
@@ -69,6 +69,11 @@
     <Compile Include="Parameter\FacetRangeParameterTests.cs" />
     <Compile Include="Parameter\FieldListParameterTests.cs" />
     <Compile Include="Parameter\FilterQueryParameterTests.cs" />
+    <Compile Include="Parameter\MinimumShouldMatchParameterTests.cs" />
+    <Compile Include="Parameter\QueryFieldParameterTests.cs" />
+    <Compile Include="Parameter\RowsParameterTests.cs" />
+    <Compile Include="Parameter\SortParameterTests.cs" />
+    <Compile Include="Parameter\StartParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDocument.cs" />
     <Compile Include="TestDocumentWithAnyPropertyTypes.cs" />
