--- a/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
+++ b/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Parameter\QueryFieldParameterTests.cs" />
     <Compile Include="Parameter\RowsParameterTests.cs" />
     <Compile Include="Parameter\SortParameterTests.cs" />
+    <Compile Include="Parameter\SpatialFilterParameterTests.cs" />
     <Compile Include="Parameter\StartParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDocument.cs" />
