--- a/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
+++ b/SolrExpress.Solr4.UnitTests/SolrExpress.Solr4.UnitTests.csproj
@@ -77,6 +77,11 @@
     <Compile Include="Parameter\SpatialFilterParameterTests.cs" />
     <Compile Include="Parameter\StartParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Result\DocumentResultTests.cs" />
+    <Compile Include="Result\FacetFieldResultTests.cs" />
+    <Compile Include="Result\FacetQueryResultTests.cs" />
+    <Compile Include="Result\FacetRangeResultTests.cs" />
+    <Compile Include="Result\StatisticResultTests.cs" />
     <Compile Include="TestDocument.cs" />
     <Compile Include="TestDocumentWithAnyPropertyTypes.cs" />
     <Compile Include="TestDocumentWithAttribute.cs" />
