--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result\DocumentResult.cs" />
+    <Compile Include="Result\FacetFieldResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
