--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result\DocumentResult.cs" />
     <Compile Include="Result\FacetFieldResult.cs" />
+    <Compile Include="Result\FacetQueryResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
