--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Result\DocumentResult.cs" />
     <Compile Include="Result\FacetFieldResult.cs" />
     <Compile Include="Result\FacetQueryResult.cs" />
+    <Compile Include="Result\FacetRangeResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
