--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -57,6 +57,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Parameter\AnyParameter.cs" />
+    <Compile Include="Parameter\FacetLimitParameter.cs" />
+    <Compile Include="Parameter\FacetQueryParameter.cs" />
+    <Compile Include="Parameter\FacetRangeParameter.cs" />
+    <Compile Include="Parameter\FacetSpatialParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider.cs" />
     <Compile Include="Result\DocumentResult.cs" />
