--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Parameter\FacetQueryParameter.cs" />
     <Compile Include="Parameter\FacetRangeParameter.cs" />
     <Compile Include="Parameter\FacetSpatialParameter.cs" />
+    <Compile Include="Parameter\FieldsParameter.cs" />
+    <Compile Include="Parameter\FilterParameter.cs" />
+    <Compile Include="Parameter\LimitParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider.cs" />
     <Compile Include="Result\DocumentResult.cs" />
