--- a/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
+++ b/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
@@ -63,7 +63,11 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Result\DocumentBuilderTests.cs" />
+    <Compile Include="Result\DocumentResultTests.cs" />
+    <Compile Include="Result\FacetFieldResultTests.cs" />
+    <Compile Include="Result\FacetQueryResultBuilderTests.cs" />
+    <Compile Include="Result\FacetRangeResultTests.cs" />
+    <Compile Include="Result\StatisticResultBuilderTests.cs" />
     <Compile Include="TestDocument.cs" />
     <Compile Include="TestDocumentWithAnyPropertyTypes.cs" />
     <Compile Include="TestDocumentWithAttribute.cs" />
