--- a/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
+++ b/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
@@ -63,6 +63,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Parameter\AnyParameterTests.cs" />
+    <Compile Include="Parameter\FacetFieldParameterTests.cs" />
     <Compile Include="Parameter\FieldsParameterTests.cs" />
     <Compile Include="Parameter\FilterParameterTests.cs" />
     <Compile Include="Parameter\LimitParameterTests.cs" />
