--- a/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
+++ b/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Parameter\FacetFieldParameterTests.cs" />
     <Compile Include="Parameter\FacetLimitParameterTests.cs" />
     <Compile Include="Parameter\FacetQueryParameterTests.cs" />
+    <Compile Include="Parameter\FacetRangeParameterTests.cs" />
     <Compile Include="Parameter\FieldsParameterTests.cs" />
     <Compile Include="Parameter\FilterParameterTests.cs" />
     <Compile Include="Parameter\LimitParameterTests.cs" />
