--- a/SolrExpress.Core/SolrExpress.Core.csproj
+++ b/SolrExpress.Core/SolrExpress.Core.csproj
@@ -66,7 +66,6 @@
     <Compile Include="GeoCoordinateConverter.cs" />
     <Compile Include="IDocument.cs" />
     <Compile Include="IResolver.cs" />
-    <Compile Include="ISettings.cs" />
     <Compile Include="ParameterValue\Any.cs" />
     <Compile Include="ParameterValue\Multi.cs" />
     <Compile Include="ParameterValue\Negate.cs" />
@@ -128,7 +127,7 @@
     <Compile Include="Result\Statistic.cs" />
     <Compile Include="SolrFieldAttribute.cs" />
     <Compile Include="Checker.cs" />
-    <Compile Include="SolrExpressConfiguration.cs" />
+    <Compile Include="Configuration.cs" />
     <Compile Include="UnexpectedJsonFormatException.cs" />
     <Compile Include="UnexpectedJsonQueryException.cs" />
     <Compile Include="UnsupportedSortTypeException.cs" />
