--- a/SolrExpress.Solr5.IntegrationTests/SolrExpress.Solr5.IntegrationTests.csproj
+++ b/SolrExpress.Solr5.IntegrationTests/SolrExpress.Solr5.IntegrationTests.csproj
@@ -53,7 +53,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="IntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TechProductDocument.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
