--- a/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
+++ b/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
@@ -88,8 +88,10 @@
     <Compile Include="ParameterValue\RangeTests.cs" />
     <Compile Include="ParameterValue\SingleTests.cs" />
     <Compile Include="Query\SolrQueryableTests.cs" />
+    <Compile Include="SimpleResolverTests.cs" />
     <Compile Include="TestDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDocumentResult.cs" />
     <Compile Include="TestDocumentWithAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
