--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extension\Internal\ExcludesExtension.cs" />
+    <Compile Include="Extension\Internal\SimpleResolverExntesion.cs" />
     <Compile Include="Parameter\AnyParameter.cs" />
     <Compile Include="Parameter\FacetFieldParameter.cs" />
     <Compile Include="Parameter\FacetLimitParameter.cs" />
