Sample code cleanup

--- a/SolrExpress.Solr6.IntegrationTests/SolrExpress.Solr6.IntegrationTests.csproj
+++ b/SolrExpress.Solr6.IntegrationTests/SolrExpress.Solr6.IntegrationTests.csproj
@@ -62,6 +62,9 @@
       <Name>SolrExpress.Solr6</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="read.md" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
