--- a/SolrExpress.Core/SolrExpress.Core.csproj
+++ b/SolrExpress.Core/SolrExpress.Core.csproj
@@ -67,33 +67,33 @@
     <Compile Include="GeoCoordinateConverter.cs" />
     <Compile Include="IDocument.cs" />
     <Compile Include="IResolver.cs" />
-    <Compile Include="ParameterValue\Any.cs" />
-    <Compile Include="ParameterValue\Multi.cs" />
-    <Compile Include="ParameterValue\Negate.cs" />
-    <Compile Include="ParameterValue\QueryAll.cs" />
-    <Compile Include="ParameterValue\Range.cs" />
-    <Compile Include="ParameterValue\Single.cs" />
-    <Compile Include="ParameterValue\SolrQueryConditionType.cs" />
-    <Compile Include="ParameterValue\SolrSpatialFunctionType.cs" />
-    <Compile Include="ParameterValue\Spatial.cs" />
-    <Compile Include="Parameter\IAnyParameter.cs" />
-    <Compile Include="Parameter\IFacetFieldParameter.cs" />
-    <Compile Include="Parameter\IFacetLimitParameter.cs" />
-    <Compile Include="Parameter\IFacetQueryParameter.cs" />
-    <Compile Include="Parameter\IFacetRangeParameter.cs" />
-    <Compile Include="Parameter\IFacetSpatialParameter.cs" />
-    <Compile Include="Parameter\IFieldsParameter.cs" />
-    <Compile Include="Parameter\IFilterParameter.cs" />
-    <Compile Include="Parameter\ILimitParameter.cs" />
-    <Compile Include="Parameter\IMinimumShouldMatchParameter.cs" />
-    <Compile Include="Parameter\IOffsetParameter.cs" />
-    <Compile Include="Parameter\IParameter.cs" />
-    <Compile Include="Parameter\IQueryFieldParameter.cs" />
-    <Compile Include="Parameter\IQueryParameter.cs" />
-    <Compile Include="ParameterValue\IQueryParameterValue.cs" />
-    <Compile Include="Parameter\ISortParameter.cs" />
-    <Compile Include="Parameter\ISpatialFilterParameter.cs" />
-    <Compile Include="Parameter\SolrFacetSortType.cs" />
+    <Compile Include="Query\ParameterValue\Any.cs" />
+    <Compile Include="Query\ParameterValue\Multi.cs" />
+    <Compile Include="Query\ParameterValue\Negate.cs" />
+    <Compile Include="Query\ParameterValue\QueryAll.cs" />
+    <Compile Include="Query\ParameterValue\Range.cs" />
+    <Compile Include="Query\ParameterValue\Single.cs" />
+    <Compile Include="Query\ParameterValue\SolrQueryConditionType.cs" />
+    <Compile Include="Query\ParameterValue\SolrSpatialFunctionType.cs" />
+    <Compile Include="Query\ParameterValue\Spatial.cs" />
+    <Compile Include="Query\Parameter\IAnyParameter.cs" />
+    <Compile Include="Query\Parameter\IFacetFieldParameter.cs" />
+    <Compile Include="Query\Parameter\IFacetLimitParameter.cs" />
+    <Compile Include="Query\Parameter\IFacetQueryParameter.cs" />
+    <Compile Include="Query\Parameter\IFacetRangeParameter.cs" />
+    <Compile Include="Query\Parameter\IFacetSpatialParameter.cs" />
+    <Compile Include="Query\Parameter\IFieldsParameter.cs" />
+    <Compile Include="Query\Parameter\IFilterParameter.cs" />
+    <Compile Include="Query\Parameter\ILimitParameter.cs" />
+    <Compile Include="Query\Parameter\IMinimumShouldMatchParameter.cs" />
+    <Compile Include="Query\Parameter\IOffsetParameter.cs" />
+    <Compile Include="Query\Parameter\IParameter.cs" />
+    <Compile Include="Query\Parameter\IQueryFieldParameter.cs" />
+    <Compile Include="Query\Parameter\IQueryParameter.cs" />
+    <Compile Include="Query\ParameterValue\IQueryParameterValue.cs" />
+    <Compile Include="Query\Parameter\ISortParameter.cs" />
+    <Compile Include="Query\Parameter\ISpatialFilterParameter.cs" />
+    <Compile Include="Query\Parameter\SolrFacetSortType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\AllowMultipleInstanceOfParameterTypeException.cs" />
     <Compile Include="IProvider.cs" />
