--- a/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
+++ b/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
@@ -85,6 +85,7 @@
     <Compile Include="TestDocument.cs" />
     <Compile Include="TestDocumentWithAnyPropertyTypes.cs" />
     <Compile Include="TestDocumentWithAttribute.cs" />
+    <Compile Include="Update\AtomicDeleteTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SolrExpress.Core\SolrExpress.Core.csproj">
