--- a/SolrExpress.Solr4/SolrExpress.Solr4.csproj
+++ b/SolrExpress.Solr4/SolrExpress.Solr4.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Query\Result\FacetRangeResult.cs" />
     <Compile Include="Query\Result\StatisticResult.cs" />
     <Compile Include="Update\AtomicDelete.cs" />
+    <Compile Include="Update\AtomicUpdate.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
