--- a/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
+++ b/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Query\Result\FacetRangeResultTests.cs" />
     <Compile Include="Query\Result\StatisticResultBuilderTests.cs" />
     <Compile Include="TestDocument.cs" />
+    <Compile Include="TestDocumentSimple.cs" />
     <Compile Include="TestDocumentWithAnyPropertyTypes.cs" />
     <Compile Include="TestDocumentWithAttribute.cs" />
     <Compile Include="Update\AtomicDeleteTests.cs" />
