--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Query\Result\FacetRangeResult.cs" />
     <Compile Include="Query\Result\StatisticResult.cs" />
     <Compile Include="Update\AtomicDelete.cs" />
+    <Compile Include="Update\AtomicUpdate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
