--- a/SolrExpress.Core/SolrExpress.Core.csproj
+++ b/SolrExpress.Core/SolrExpress.Core.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Query\IQueryInterceptor.cs" />
     <Compile Include="Query\IResultInterceptor.cs" />
     <Compile Include="Query\IValidation.cs" />
+    <Compile Include="Query\SimpleLogQueryInterceptor.cs" />
     <Compile Include="Query\SolrQueryable.cs" />
     <Compile Include="Query\QueryResult.cs" />
     <Compile Include="Query\UnknownResolveResultBuilderException.cs" />
